update KALL-E conclusion

--- a/Models/SpeechLM/2024.12.22_KALL-E.md
+++ b/Models/SpeechLM/2024.12.22_KALL-E.md
@@ -202,3 +202,21 @@ In zero-shot accent cloning, as depicted in Table~\ref{tab:vctk_tts}, NaturalSpe
 Additionally, KALL-E can generate diverse speech with various speaker timbres and speaking styles in an unconditional TTS manner. We show this ability on our online demo page.
 
 ## 6·Conclusions: 结论
+
+In this study, we propose KALL-E, an AR language model approach for TTS with next-distribution prediction. By leveraging WaveVAE to extract continuous speech distributions, KALL-E predicts these distributions conditioned on text input through an AR language model. We demonstrate the superior in-context learning capability of KALL-E in zero-shot scenarios. Additionally, KALL-E excels in cloning the emotion and accent during synthesis, offering diverse outputs in sampling-based inference.
+
+Despite these advancements, KALL-E has several limitations. First, like other AR TTS systems, it still faces challenges in synthesis robustness. Specifically, some words may be unclear, missed, or duplicated in the generated speech. Second, the inference efficiency can be improved. Although the current system operates at a frame rate of 100 Hz, reducing the frame rate to a lower frame rate, such as 12.5 Hz, could improve computational efficiency. Lastly, the LibriTTS corpus used for training is relatively small, and the performance of KALL-E could benefit from leveraging larger datasets, such as LibriLight\cite{librilight}, WenetSpeech4TTS~\cite{wenetspeech4tts} or Emilia~\cite{Emilia}.
+
+### Future Work
+
+#### Scaling law
+
+We observe that when KALL-E is trained on a 10-hour corpus, the generated speech lacks intelligibility. However, when scaled to a 500-hour corpus, such as LibriTTS, the intelligibility and naturalness of the synthesized speech improve significantly. We believe that by scaling up to tens of thousands of hours of speech data, the performance of KALL-E could be further enhanced, enabling more realistic and expressive speech synthesis.
+
+#### Sampling mechanism
+
+In discrete token-based language models, the sampling mechanism significantly affects the quality, diversity, and coherence of the generated token sequence. Standard techniques, such as top-k sampling, top-p sampling, and additional parameters like temperature and repetition penalty, can be adjusted to optimize performance. However, there is limited research on effective sampling from continuous speech representations. Investigating and developing new sampling strategies for continuous latent distributions will be key to improving KALL-E's generation capabilities.
+
+#### Spoken dialogue system
+
+According to WavChat~\cite{wavchat}, most speech comprehension systems rely on continuous speech representations for capturing fine-grained speech details, whereas most speech generation systems typically use discrete speech representations due to next-token prediction. However, in AR language models, the output is intrinsically equal to the input, meaning the output and input representations should be the same type. KALL-E's success in using continuous speech distributions for speech generation suggests a potential pathway for integrating continuous representations into spoken dialogue systems, addressing the current divide between comprehension and generation models.
