--- a/Models/SpeechLM/2024.12.22_KALL-E.md
+++ b/Models/SpeechLM/2024.12.22_KALL-E.md
@@ -21,6 +21,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 We introduce ***KALL-E***, a novel autoregressive (AR) language modeling approach with next-distribution prediction for text-to-speech (TTS) synthesis.
 Unlike existing methods, ***KALL-E*** directly models and predicts the continuous speech distribution conditioned on text without relying on VAE- or diffusion-based components.
 Specifically, we use WaveVAE to extract continuous speech distributions from waveforms instead of using discrete speech tokens.
@@ -29,6 +32,19 @@ Experimental results show that ***KALL-E*** outperforms open-source implementati
 Moreover, ***KALL-E*** demonstrates exceptional zero-shot capabilities in emotion and accent cloning.
 Importantly, ***KALL-E*** presents a more straightforward and effective paradigm for using continuous speech representations in TTS.
 Audio samples are available at: [this https URL](https://zxf-icpc.github.io/kalle/).
+
+</details>
+<br>
+
+我们介绍 ***KALL-E***, 一种新颖的自回归语言建模方法, 通过下一分布预测来实现文本转语音合成.
+和现有方法不同, ***KALL-E*** 直接建模并预测基于文本条件化的连续语音分布, 而不依赖于变分自编码器或扩散模型组件.
+具体来说, 我们使用 WaveVAE 来从波形中提取连续语音分布而不是使用离散语音 Token.
+单个自回归语言模型从文本预测这些连续语音分布, 以 Kullback-Leibler 散度损失作为约束.
+
+实验结果表明 ***KALL-E*** 在零样本文本转语音场景下的自然度和说话人相似性优于 YourTTS, VALL-E, NaturalSpeech2, CosyVoice 的开源实现.
+此外, ***KALL-E*** 在情感和口音克隆方面也展现出了卓越的零样本能力.
+重要的是, ***KALL-E*** 提供了一个更加直接和有效的在文本转语音中使用连续语音表示的范式.
+音频示例可在: [这个 https URL](https://zxf-icpc.github.io/kalle/) 获得.
 
 ## 1·Introduction: 引言
 
