--- a/Models/Acoustic/2020.05.22_Glow-TTS.md
+++ b/Models/Acoustic/2020.05.22_Glow-TTS.md
@@ -87,9 +87,9 @@ In addition to efficient density estimation, the transformations proposed in [2,
 Their proposed models both synthesized raw audio significantly faster than [WaveNet](../Vocoder/2016.09.12_WaveNet.md).
 By applying these transformations, ***Glow-TTS*** can synthesize a mel-spectrogram given text in parallel.
 
-In parallel with our work, [AlignTTS](../TTS2_Acoustic/2020.03.04_AlignTTS.md), [Flowtron](../TTS2_Acoustic/2020.05.12_Flowtron.md), and [Flow-TTS](../TTS2_Acoustic/2020.05.04_Flow-TTS.md) have been proposed.
-[AlignTTS](../TTS2_Acoustic/2020.03.04_AlignTTS.md) and [Flow-TTS](../TTS2_Acoustic/2020.05.04_Flow-TTS.md) are parallel TTS models without the need of external aligners, and [Flowtron](../TTS2_Acoustic/2020.05.12_Flowtron.md) is a flow-based model which shows the ability of style transfer and controllability of speech variation.
-However, [AlignTTS](../TTS2_Acoustic/2020.03.04_AlignTTS.md) is not a flow-based model but a feed-forward network, and [Flowtron](../TTS2_Acoustic/2020.05.12_Flowtron.md) and Flow TTS use soft attention modules.
+In parallel with our work, [AlignTTS](2020.03.04_AlignTTS.md), [Flowtron](2020.05.12_Flowtron.md), and [Flow-TTS](2020.04.09_Flow-TTS.md) have been proposed.
+[AlignTTS](2020.03.04_AlignTTS.md) and [Flow-TTS](2020.04.09_Flow-TTS.md) are parallel TTS models without the need of external aligners, and [Flowtron](2020.05.12_Flowtron.md) is a flow-based model which shows the ability of style transfer and controllability of speech variation.
+However, [AlignTTS](2020.03.04_AlignTTS.md) is not a flow-based model but a feed-forward network, and [Flowtron](2020.05.12_Flowtron.md) and Flow TTS use soft attention modules.
 By employing both hard monotonic alignments and generative flows, our model combines the best of both worlds in terms of robustness, diversity and controllability.
 
 ## 3·Methodology: 方法
