--- a/Models/Acoustic/2017.03.29_Tacotron.md
+++ b/Models/Acoustic/2017.03.29_Tacotron.md
@@ -164,7 +164,7 @@ As shown later, a vanilla seq2seq model does not work well for character-level i
 
 ## 3·Methodology: 方法
 
-![](Images/2017.03.29.Tacotron.Fig.01.png)
+![Images/2017.03.29_Tacotron_Fig.01.png](Images/2017.03.29_Tacotron_Fig.01.png)
 
 <details>
 <summary>展开原文</summary>
@@ -185,7 +185,7 @@ We describe these components below.
 
 ### 3.1.CBHG module: CBHG 模块
 
-![](Images/2017.03.29.Tacotron.Fig.02.png)
+![Images/2017.03.29_Tacotron_Fig.02.png](Images/2017.03.29_Tacotron_Fig.02.png)
 
 <details>
 <summary>展开原文</summary>
